--- a/angular.json
+++ b/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "Exercise_Xp": {
+    "Exercice_Xp_Gold": {
       "projectType": "application",
       "schematics": {},
       "root": "",
@@ -13,7 +13,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/exercise-xp",
+            "outputPath": "dist/exercice-xp-gold",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": [
@@ -60,10 +60,10 @@
           "builder": "@angular-devkit/build-angular:dev-server",
           "configurations": {
             "production": {
-              "browserTarget": "Exercise_Xp:build:production"
+              "browserTarget": "Exercice_Xp_Gold:build:production"
             },
             "development": {
-              "browserTarget": "Exercise_Xp:build:development"
+              "browserTarget": "Exercice_Xp_Gold:build:development"
             }
           },
           "defaultConfiguration": "development"
@@ -71,7 +71,7 @@
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "Exercise_Xp:build"
+            "browserTarget": "Exercice_Xp_Gold:build"
           }
         },
         "test": {
@@ -96,6 +96,6 @@
     }
   },
   "cli": {
-    "analytics": "74bb5c8d-d5d0-4c17-98bf-21974817f5ed"
+    "analytics": "ddf9dadb-2ada-463b-9841-0fb729359422"
   }
 }
